--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ logging.level.guru.springframework=debug
 
 spring.data.mongodb.port=0
 spring.data.mongodb.host=localhost
+
+spring.jackson.serialization.indent-output=true
